TheMightyDude (25 July 2012)
--------------------------------------
Fixed Notice: Undefined variable: level_factor in combat.php
Fixed Notice: Undefined variable: torp_dmg_rate in combat.php
Fixed Notice: Undefined variable: rating_combat_factor in combat.php
Fixed Notice: Undefined variable: upgrade_factor in combat.php
Fixed Notice: Undefined variable: upgrade_cost in combat.php
Fixed Notice: Use of undefined constant dev_escapepod - assumed 'dev_escapepod' in combat.php
Fixed Notice: Use of undefined constant ship_id - assumed 'ship_id' in combat.php
Fixed Notice: Undefined variable: armor_lost in combat.php
Fixed Notice: Undefined variable: fighters_lost in combat.php
Fixed Notice: Undefined index: winers should be $winer in calc_ownership.php
Fixed Notice: Undefined variable: l_youcan should be l_md_youcan in modify_defences.php
Fixed Notice: Use of undefined constant beams - assumed 'beams' in modify_defences.php
Fixed Notice: Use of undefined constant ship_energy - assumed 'ship_energy' in modify_defences.php
Fixed Warning:include_once(includes/sector_fighters.php): failed to open stream: No such file or directory in modify_defences.php
Fixed Notice: Undefined variable: mine_hullsize in traderoute.php
Removed two lines of language log lines that should of been there (not used) in attack.php
Fixed Incorrect language variable was $l_att_ysal2 should be $l_att_ysalv2 in attack.php
Fixed Incorrect language variable was $l_cmb_attackershields, $l_cmb_attackertorps, $l_cmb_attackerarmor and $l_cmb_attackertorpdamage in combat.php
Fixed Incorrect language variable was $l_igb_ctransferred should be $l_igb_ctransferredfrom in igb.php
Fixed Incorrect language variable was $l_torpedoes should be $l_torps like the rest of the files in planet2.php
Fixed renamed a few language vars to be cosistan in traderoute.php

TheMightyDude (24 July 2012)
--------------------------------------
Fixed Notice: Undefined variable: mine_hullsize in planet_report_ce.php